<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <capability android:name="actions.intent.CREATE_MESSAGE">
        <intent
            android:action="ais.tee.action.CREATE_MESSAGE"
            android:targetPackage="ais.tee"
            android:targetClass="ais.tee.MainActivity">
            <parameter
                android:name="message.text"
                android:key="text"
                android:required="true" />
        </intent>
    </capability>
    <share-target android:targetClass="ais.tee.MainActivity">
        <data android:mimeType="text/*" />
        <category android:name="ais.tee.category.NATIVE_CHAT_SHARE_TARGET" />
    </share-target>
    <shortcut
        android:shortcutId="web_ai"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_web_ai_short"
        android:shortcutLongLabel="@string/shortcut_web_ai_long">
        <intent
            android:action="ais.tee.action.OPEN_DESTINATION"
            android:data="aistee://quick-action/web_ai"
            android:targetPackage="ais.tee"
            android:targetClass="ais.tee.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="compare"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_compare_short"
        android:shortcutLongLabel="@string/shortcut_compare_long">
        <intent
            android:action="ais.tee.action.OPEN_DESTINATION"
            android:data="aistee://quick-action/compare"
            android:targetPackage="ais.tee"
            android:targetClass="ais.tee.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="studio"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_studio_short"
        android:shortcutLongLabel="@string/shortcut_studio_long">
        <intent
            android:action="ais.tee.action.OPEN_DESTINATION"
            android:data="aistee://quick-action/studio"
            android:targetPackage="ais.tee"
            android:targetClass="ais.tee.MainActivity" />
    </shortcut>
</shortcuts>
